[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p256 = "0.13.2"
ring = "0.17.8"
ripemd = "0.1.3"
sha2 = "0.10.8"
bs58 = "0.5.1"
hex = "0.4.3"
bincode = {version = "1.3.3"}
serde = { version = "1.0", features = ["derive", "rc"]}